<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdsl_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 Node for the Sparse Distance Sampling Localization (SDSL) algorithm for Online Life-long indoor localization.</description>
  <maintainer email="michaelmoshe@mail.tau.ac.il">Michael Bilevich</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
